feat: Include FastAPI connectio to Supabase DDBB for Signup process (parents and teachers)

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,3 +2,5 @@
 VITE_SUPABASE_URL=https://YOUR_PROJECT_ID.supabase.co
 # Supabase anon/public key from Project Settings -> API
 VITE_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
+# FastAPI backend base URL with API prefix
+VITE_BACKEND_API_URL=http://localhost:8000/api/v1
