feat: add marketplace logic for the backend and implement real teachers in the list.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,3 +4,5 @@ VITE_SUPABASE_URL=https://YOUR_PROJECT_ID.supabase.co
 VITE_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
 # FastAPI backend base URL with API prefix
 VITE_BACKEND_API_URL=http://localhost:8000/api/v1
+# Supabase public bucket for teacher profile photos
+VITE_SUPABASE_PROFILE_PHOTOS_BUCKET=teacher-profile-photos
